Bug 75733 - systemd-nspawn: run command as user in i686 container on x86_64 OS fails
Summary: systemd-nspawn: run command as user in i686 container on x86_64 OS fails
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-03 23:37 UTC by U. Artie Eoff
Modified: 2014-03-11 01:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2014-03-03 23:37:48 UTC
I'm using systemd 210 from rawhide on Fedora 20 x86_64.  I've created a container with i686 yum packages installed.  When attempting to run a systemd-nspawn command with "-u <user>" specified, I get the following error:

Spawning container mycontainer-i686 on /srv/mycontainer-i686. Press ^] three times within 1s to abort execution.
get_user_creds() failed: Success

Container mycontainer-i686 failed with error code 1.

This does not happen if the container has x86_64 yum packages installed instead.

Steps to Reproduce:
-------------------

$ su -
$ mkdir /srv/mycontainer-i686
$ mkdir -p /srv/mycontainer-i686/etc/yum/vars
$ echo i386 > /srv/mycontainer-i686/etc/yum/vars/basearch
$ echo i686 > /srv/mycontainer-i686/etc/yum/vars/arch
$ yum -y --releasever=20 --nogpg --installroot=/srv/mycontainer-i686 --disablerepo='*' --enablerepo=fedora install systemd passwd yum fedora-release vim-minimal
$ systemd-nspawn -D /srv/mycontainer-i686 adduser jail
$ systemd-nspawn -D /srv/mycontainer-i686 passwd -d jail
$ systemd-nspawn -u jail -D /srv/mycontainer-i686 whoami

I also tried installing systemd from rawhide into the container, but still get the same error.
Comment 1 Lennart Poettering 2014-03-11 01:44:41 UTC
Fixed in git.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.